apps/roomix-onboarding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roomix-onboarding
spec:
  selector:
    app: roomix-onboarding
  ports:
    - port: 80
      targetPort: 80
      name: http
