apps/roomix-onboarding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roomix-onboarding
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - roomix-onboarding.agusbravo.dev
      secretName: website-tls
  rules:
    - host: roomix-onboarding.agusbravo.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: roomix-onboarding
                port:
                  number: 80
